--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   get_storage: ^2.1.1
   sizer: ^2.0.15
   font_awesome_flutter: ^10.3.0
+  http: ^1.2.2
+  intl: ^0.19.0
+  shared_preferences: ^2.3.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
